# 16puzzle

./: README.md
puzzle-15-wasm/: .gitignore  Cargo.toml  index.html
puzzle-15-wasm/jules-scratch/verification/: verify_puzzle.py
puzzle-15-wasm/src/: lib.rs  shader.wgsl
