[package]
name = "puzzle-15-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "0.19"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
    "MouseEvent"
]}
console_error_panic_hook = "0.1"
bytemuck = { version = "1.15", features = ["derive"] }
